src/test/deca/context/invalid/ContextSansObjet/OperationsArithmetiques/ModuloIntString.deca
//Description :
//	Vérification contextuelle de l'opérateur % avec pour entrée <int, string>
//
//Résultats :
//  Erreur contextuelle
//	ligne 9 : type incompatible

{
    int x = 1%"Hello";
}